    include bristuff from junghanns.net (Closes: #286797)
  * 18_debian-libedit.dpatch: removed due to command history problem.
    (Closes:#281690)
  * debian/asterisk.init: Added grace timeout of 2 secs before hard shutting
    down running daemons to don't scatter incorrect warnings.
  * debian/asterisk-config.default: Added template for init commands for
    zaphfc.

 -- Kilian Krause <kk@verfaction.de>  Mon, 14 Feb 2005 11:42:46 +0100

asterisk (1:1.0.5-2) unstable; urgency=low

  * Debian VoIP Team upload.
  * asterisk.init, asterisk-config.default: probably fixed start-as-user-with-
    multiple-groups-problem.
  * patches/40_initgroups.dpatch: added patch from Florian Weimer
    <fw@deneb.enyo.de>. Thanks! (Closes: #293124)
  * debian/postinst: Make asterisk user's home /var/lib/asterisk upon user
    request.
  * debian/control: Bump libpri build-depends to 1.0.4-1. (Closes: #293990)

 -- Kilian Krause <kk@verfaction.de>  Tue,  8 Feb 2005 11:40:43 +0100

asterisk (1:1.0.5-1) unstable; urgency=low

  * Debian VoIP Team upload.
  * New upstream release.

  * Kilian Krause:
    - debian/asterisk.init: fixed multiple GID problem when starting asterisk (as
      reported by Raoul Bönisch and Simon Peter). Unfortunatelly this does
      remove the chance to run as real-time prio.
    - debian/asterisk.init: fixed stale stop by using start-stop-server after
      soft shutdown (Closes: #263879)
    - debian/asterisk.init: Fixed running as root problem for #279052. At least
      through the /etc/init.d/asterisk you won't be able to run asterisk as
      root (not even with another username). (Closes: #279052)
    - debian/asterisk.init: Added switch to run asterisk via safe_asterisk
      optionally for automatic restart (Closes: #266805)
    - debian/patches/01_security_hotfix_287851.dpatch: Removed, as is
      incorporated in 1.0.4 upstream release.

  * Jose Carlos
    - debian/rules: add a check at build time for fpm sounds. If they exist,