@@ -10,8 +10,9 @@ asterisk (1:1.0.5-3) UNRELEASED; urgency=low
     down running daemons to don't scatter incorrect warnings.
   * debian/asterisk-config.default: Added template for init commands for
     zaphfc.
+  * debian/rules: Remove the asterisk.8.gz recompression. (Closes: #295220)
 
- -- Kilian Krause <kk@verfaction.de>  Mon, 14 Feb 2005 11:42:46 +0100
+ -- Kilian Krause <kk@verfaction.de>  Mon, 14 Feb 2005 18:03:56 +0100
 
 asterisk (1:1.0.5-2) unstable; urgency=low
 
